<resources>
    <string name="app_name">LAR</string>
    <string name="action_settings">Settings</string>
    <string name="action_nearby_places">Nearby Places</string>
    <string name="action_my_locations">My Locations</string>
    <string name="action_add_location">Add Favourites</string>
    <string name="action_history">History</string>
    <string name="button_pick_location">Choose Location</string>
    <string name="button_add_reminder">Create Reminder</string>
    <string name="button_save">Save Changes</string>
    <string name="button_get_directions">Get Directions</string>
    <string name="label_reminder">Reminder</string>
    <string name="label_email">Email</string>
    <string name="label_phone">Phone</string>
    <string name="label_history">History</string>
    <string name="radiobutton_mot_walking">Walking</string>
    <string name="radiobutton_mot_cycling">Cycling</string>
    <string name="radiobutton_mot_driving">Driving</string>
    <string name="textview_mot">Choose Your Method of Transportation</string>
    <string name="new_task">New Reminder</string>
    <string name="add_task_from_fav">Add From Favourites</string>
    <string name="open_from_notif">Reminder Details</string>
    <string name="button_pick_date">Choose Date</string>
    <string name="button_pick_time">Choose Time</string>
    <string name="textView_desc">Enter Reminder Description</string>
    <string name="button_delete">Delete</string>
    <string name="textview_addlocation_name">Location Name</string>
    <string name="button_addlocation_add">Add To Favourites</string>
    <string name="edit_task">Edit Reminder</string>
    <string name="title_activity_maps">Map</string>
    <string name="completed_task">Completed Task</string>
    <string name="button_mark_done">Mark as Done</string>
</resources>
