<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_pick_location"
                android:id="@+id/button_picklocation"
                android:textAllCaps="false"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView_location"
                android:layout_toRightOf="@+id/button_picklocation"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignBottom="@+id/button_picklocation"
                android:layout_alignParentTop="true"
                android:textAlignment="center" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentStart="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:id="@+id/button_pick_date"
                android:text="@string/button_pick_date"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView_date"
                android:layout_toRightOf="@+id/button_pick_date"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignBottom="@+id/button_pick_date"
                android:layout_alignParentTop="true"
                android:textAlignment="center" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:layout_below="@+id/button_pick_date"
                android:id="@+id/button_pick_time"
                android:text="@string/button_pick_time"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView_time"
                android:layout_toRightOf="@+id/button_pick_time"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignBottom="@+id/button_pick_time"
                android:textAlignment="center"
                android:layout_below="@+id/textView_date" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textview_mot"
                android:text="@string/textview_mot"
                android:layout_below="@+id/button_pick_time"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textview_mot"
                android:id="@+id/radioGroupMot">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radiobutton_mot_walking"
                    android:text="@string/radiobutton_mot_walking"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radiobutton_mot_cycling"
                    android:text="@string/radiobutton_mot_cycling"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radiobutton_mot_driving"
                    android:text="@string/radiobutton_mot_driving"/>

            </RadioGroup>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout2"
                android:layout_alignParentStart="true">

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_add_reminder"
            android:id="@+id/button_add_reminder"
            android:textAllCaps="false"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_save"
            android:id="@+id/button_save"
            android:textAllCaps="false"
            android:layout_marginStart="12dp"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/button_add_reminder" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_get_directions"
            android:id="@+id/button_get_directions"
            android:textAllCaps="false"
            android:layout_below="@+id/button_add_reminder"
            android:layout_alignParentStart="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_mark_done"
            android:id="@+id/button_mark_done"
            android:textAllCaps="false"
            android:layout_below="@+id/button_save"
            android:layout_alignStart="@+id/button_save" />
    </RelativeLayout>

</LinearLayout>